fix most discover width issues on small screens (closes #50)

--- a/app/discover/less/viz.less
+++ b/app/discover/less/viz.less
@@ -68,6 +68,7 @@
         width: 19em;
         border-left: 1px solid #FFF;
         padding-left: 1em;
+        overflow: hidden;
       }
 
       #analysis {
